# unit-test-example

./: README.md  west.yml
app/: CMakeLists.txt  prj.conf
app/src/: main.c  my_custom_application_code.c  my_custom_code.c
app/src/include/: my_custom_application_code.h  my_custom_code.h
tests/basic_application_code/: CMakeLists.txt  testcase.yaml
tests/basic_application_code/src/: main.c
tests/basic_unit/: testcase.yaml
tests/basic_unit/src/: main.c
tests/unit/: CMakeLists.txt
tests/unit/src/: main.c
